--- a/templatedjango/apptemplate/templates/productos/productos.html
+++ b/templatedjango/apptemplate/templates/productos/productos.html
@@ -26,12 +26,13 @@
                             <div class="form-group">
 
                                 <select class="form-control" title="Selecione una categoría" id="categoria">
-                                    <option id="desactivar" disabled='disabled' selected='selected'> Seleccionar Categorias
+                                    <option id="desactivar" disabled='disabled' selected='selected'> Seleccionar
+                                        Categorias
                                     </option>
 
                                     {% for mostrar in categoria  %}
                                     <option value="{{mostrar.nombre_categoria}}">{{mostrar.nombre_categoria}}</option>
-                                      
+
                                     {% endfor %}
 
 
@@ -43,15 +44,17 @@
 
                                 <div class="form-group col-xl-8">
 
-                                    <select class="form-control" data-live-search="true"
-                                        title="Seleccione un Producto" id="select_producto">
-                                        <option id="desactivar" disabled='disabled' selected='selected'> Seleccionar Productos
+                                    <select class="form-control" data-live-search="true" title="Seleccione un Producto"
+                                        id="select_producto">
+                                        <option id="desactivar" disabled='disabled' selected='selected'> Seleccionar
+                                            Productos
                                         </option>
                                         {% for mostrar in nombre %}
 
-                                        <option class="nombre_productos" value="{{mostrar.id}}-{{mostrar.categoria}}">{{mostrar.nombre_productos}}</option>
+                                        <option class="nombre_productos" value="{{mostrar.id}}-{{mostrar.categoria}}">
+                                            {{mostrar.nombre_productos}}</option>
                                         {% endfor %}
-                                      
+
                                     </select>
 
                                     <input type="hidden" name="id_producto" id="id_producto" value="valor">
@@ -79,25 +82,24 @@
                                             cambiar_enviar(select_productos, enviar_producto);
                                             console.log(enviar_producto.value)
                                         });
-
-    
                                     </script>
 
                                 </div>
 
                                 <div class="form-group col-xl-4">
 
-                                    <button type="button" class="form-control btn btn-outline-info" data-toggle="modal"
-                                        data-target="#exampleModalCenter">Añadir Producto Nuevo</button>
-                                    
-                                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-                                        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="form-control btn btn-outline-info " data-toggle="modal" data-target="#modal{{mostrar.id}}">
+                                        Agregar nombre
+                                    </button>
 
-                                        <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="modal{{mostrar.id}}" tabindex="-1" role="dialog"
+                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog" role="document">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title" id="exampleModalLongTitle">¡Añada el Nombre
-                                                        de un Producto Nuevo!</h5>
+                                                    <h5 class="modal-title" id="exampleModalLabel">Agregar un Nuevo Nombre de Producto!</h5>
                                                     <button type="button" class="close" data-dismiss="modal"
                                                         aria-label="Close">
                                                         <span aria-hidden="true">&times;</span>
@@ -109,10 +111,9 @@
 
                                                         <div class="row">
 
-                                                            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
+                                                            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
-                                                                <div class="card shadow p-3 mb-5 bg-white rounded"
-                                                                    style="border:none;">
+                                                                <div class="card shadow p-3 mb-5 bg-white rounded"style="border:none;">
 
                                                                     <div class="card-body">
 
@@ -120,54 +121,41 @@
 
                                                                         <!-- <form action="productos" method="post" id="id_form_modal"> -->
 
-                                                                            <!-- {% csrf_token %} -->
+                                                                        {% csrf_token %}
 
-                                                                            <input type="hidden" name="guardar"
-                                                                                value="guardar">
+                                                                        <input type="hidden" name="guardar" value="guardar">
+
+                                                                        <div class="form-group">
+
                                                                             <div class="form-group">
 
-                                                                                <div class="form-group">
+                                                                                <select class="form-control selectpicker" name="categoria" title="Selecione una categoría">
 
-                                                                                    <select
-                                                                                        class="form-control selectpicker"
-                                                                                        name="categoria"
-                                                                                        title="Selecione una categoría">
+                                                                                    <option option id="" value="Tunas"> Tunas</option>
+                                                                                    <option option id="" value="Suculentas"> Suculentas</option>
+                                                                                    <option option id="" value="Plantas Ornamentales"> Plantas Ornamentales </option>
 
-                                                                                        <option option id=""
-                                                                                            value="Tunas">Tunas</option>
-                                                                                        <option option id=""
-                                                                                            value="Suculentas">
-                                                                                            Suculentas</option>
-                                                                                        <option option id=""
-                                                                                            value="Plantas Ornamentales">
-                                                                                            Plantas Ornamentales
-                                                                                        </option>
-
-
-                                                                                    </select>
-
-                                                                                </div>
-
-                                                                                <div class="form-group">
-
-                                                                                    <input type="text"
-                                                                                        class="form-control"
-                                                                                        name="producto"
-                                                                                        placeholder="Nombre del Producto">
-
-                                                                                </div>
+                                                                                </select>
 
                                                                             </div>
 
-                                                                            
+                                                                            <div class="form-group"> 
 
-                                                                            <button type="button" class="btn btn-outline-info float-right" id="enviar" >Agregar</button>
+                                                                                <input type="text" class="form-control" name="producto" placeholder="Nombre del Producto">
 
-                                                                            
-                                                                            <!-- <script>
+                                                                            </div>
+
+                                                                        </div>
+
+
+
+                                                                        
+
+
+                                                                        <!-- <script>
                                                                                 form = document.getElementById('id_form_modal')
                                                                                 button = document.getElementById('enviar')
-
+                                        
                                                                                 categoria.addEventListener("click", function () {
                                                                                     send_form(form)
                                                                                 });
@@ -183,77 +171,24 @@
 
                                                             </div>
 
-                                                            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 card shadow p-3 mb-5 bg-white rounded"
-                                                                style="border:none;">
-
-                                                                <table id="example"
-                                                                    class="tablita table  table-hover table-bordered  display nowrap"
-                                                                    cellspacing="0" width="100%">
-                                                                    <thead>
-                                                                        <tr>
-                                                                            <th style="color: #A3A6B4;">Producto</th>
-                                                                            <th style="color: #A3A6B4;">Categoría</th>
-                                                                            <th style="color: #A3A6B4;">Acciones</th>
-                                                                        </tr>
-                                                                    </thead>
-                                                                    <tbody>
-
-                                                                        <tr>
-                                                                            <td class="small" id=""></td>
-                                                                            <td class="small"></td>
-
-                                                                            <!-- codigo para el boton de editar 
-                                                                                -------------------------------------------------- -->
-                                                                            <td class="small">
-                                                                                {% load static %}
-                                                                                <!-- <i style="color: white;" type="button"
-                                                                                    data-toggle="modal"
-                                                                                    data-target="#editar{{insumo.id}}"><i><img
-                                                                                            src="{% static '/assets/icons/icon_edit.svg' %}"
-                                                                                            alt=""></i></i> -->
-
-                                                                                <!-- codigo para el boton de borrar  -->
-                                                                                <!-- -------------------------------------------- -->
-                                                                                <!-- Button trigger modal -->
-                                                                                <!-- <i style="color: white; padding:0 10px ;"
-                                                                                    type="button" data-toggle="modal"
-                                                                                    data-target="#borrar">
-                                                                                    {% load static %}
-                                                                                    <img src="{% static '/assets/icons/circle-remove.svg' %}"
-                                                                                        alt="">
-                                                                                </i> -->
-
-                                                                            </td>
-
-                                                                        </tr>
-
-
-
-                                                                    </tbody>
-                                                                    <tfoot>
-                                                                        <tr>
-                                                                            <th style="color: #A3A6B4;">Producto</th>
-                                                                            <th style="color: #A3A6B4;">Categoría</th>
-                                                                            <th style="color: #A3A6B4;">Acciones</th>
-                                                                        </tr>
-                                                                    </tfoot>
-                                                                </table>
-
-                                                            </div>
+                                                            
                                                         </div>
 
                                                     </div>
 
-
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button" class="btn btn-outline-danger"
-                                                        data-dismiss="modal">Cerrar</button>
+                                                    <button id="enviar" type="button" class="btn btn-outline-info float-right" data-dismiss="modal">Guardar</button>
                                                 </div>
+
+                                                
+
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+
+
 
                             </div>
 
@@ -262,17 +197,17 @@
 
                                     {% for mostrar in form  %}
 
-                                    <label for="{{form.auto_id}}" class="custom-file-label">sube una imagen</label>  
-                                        {{form}}
+                                    <label for="{{form.auto_id}}" class="custom-file-label">sube una imagen</label>
+                                    {{form}}
                                     {% endfor %}
-                                    
-                                </div>                                
+
+                                </div>
                             </div>
 
                             <div class="form-group">
 
-                                <textarea class="form-control" id="" rows="3"
-                                    placeholder="Ingrese una descripción" name="descripcion"></textarea>
+                                <textarea class="form-control" id="" rows="3" placeholder="Ingrese una descripción"
+                                    name="descripcion"></textarea>
 
                             </div>
 
@@ -306,9 +241,6 @@
                                 alert(' Desea guardar este producto?. ')
                                 send_form(form)
                             });
-                            
-
-                            
                         </script>
 
                     </form>
